# redis-om-python

./: .gitignore  CLAUDE.md  IMPLEMENTATION_COMPLETE.md  LICENSE  LICENSE.OLD  MANIFEST.in  Makefile  NOTICE  PYDANTIC.md  README.md  SECURITY_REVIEW.md  SUMMARY.md  WARP.md  docker-compose.cluster.yml  docker-compose.yml  docs.json  make_sync.py  pyproject.toml  pytest.ini  test_class_index.py  test_execution_report.py  test_implementation_status.py  tox.ini
.github/: dependabot.yml  wordlist.txt
.github/workflows/: ci.yml  codeql.yml  codspeed.yml  pypi-publish.yaml  release-drafter.yml
.serena/: project.yml
aredis_om/: __init__.py  _compat.py  async_redis.py  checks.py  connections.py  hotkeys.py  observability.py  util.py
aredis_om/integrations/: __init__.py  fastapi_redis_sdk.py
aredis_om/model/: array.py  atomic_string.py  bitmap.py  cluster_admin.py  counter.py  encoders.py  keyspace_events.py  model.py  query_resolver.py  render_tree.py  resp3_shim.py  sorted_set.py  stream.py  types.py  vector_set.py
aredis_om/model/cli/: migrate.py
aredis_om/model/migrations/: migrator.py
docs/: atomic_counter.md  atomic_counter.mdx  atomic_strings.mdx  benchmarks.mdx  bitmap_ops.mdx  bulk_operations.mdx  cli.mdx  cluster.mdx  cluster_admin.mdx  connections.md  connections.mdx  errors.mdx  examples.mdx  fastapi_integration.md  fastapi_integration.mdx  geo_queries.mdx  getting_started.md  getting_started.mdx  hash_field_ttl.mdx  hotkeys.mdx  index.md  index.mdx  keyspace_notifications.mdx  migrations.mdx  models.md  models.mdx  observability.md  observability.mdx  pending_features.mdx  pipelines.mdx  protocol.mdx  queries.mdx  redis_arrays.md  redis_arrays.mdx  redis_modules.mdx  redisvl.mdx  sorted_set_aggregations.mdx  streams.mdx  upcoming_valkey.mdx  upstream_fixes.mdx  (+2 more)
docs/cli/: cli_reference.mdx
docs/examples/: ecommerce_catalog.mdx  find_my_coffee.mdx  order_pipeline.mdx
redis_om/: checks.py  util.py
redis_om/model/: model.py  query_resolver.py
redis_om/model/cli/: migrate.py
redis_om/model/migrations/: migrator.py
tests/: _compat.py  _sync_redis.py  conftest.py  test_atomic_counter.py  test_atomic_string.py  test_audit_fixes.py  test_bitmap.py  test_bug_fixes.py  test_bytes_roundtrip.py  test_checks.py  test_class_index.py  test_cluster_admin.py  test_cluster_migrator_alias.py  test_cluster_operations.py  test_connections.py  test_conversion_edge_cases.py  test_datetime_list_roundtrip.py  test_embedded_structures.py  test_encoders.py  test_fastapi_integration.py  test_find_query.py  test_find_query_delete.py  test_from_redis_resp3.py  test_hash_field_ttl.py  test_hash_model.py  test_json_all_pks_type_filter.py  test_json_model.py  test_keyspace_events.py  test_knn_expression.py  test_migrator_alias.py  test_migrator_index_flakiness.py  test_nested.py  test_observability.py  test_observability_hotkeys.py  test_oss_redis_features.py  test_performance_benchmark.py  test_pipeline.py  test_pipeline_geo.py  test_protocol_benchmark.py  test_protocol_compat.py  (+15 more)
tests/unit/: test_atomic_string_unit.py  test_checks.py  test_cluster_admin_unit.py  test_counter_unit.py  test_encoders_unit.py  test_migrator_unit.py  test_query_resolver.py  test_redis_array_unit.py  test_sorted_set_unit.py  test_token_escaper.py  test_types.py  test_vector_set_unit.py
tests_sync/: _compat.py  test_bug_fixes.py  test_find_query.py  test_hash_model.py  test_json_model.py  test_knn_expression.py  test_oss_redis_features.py  test_pydantic_compat.py  test_tag_separator.py
