[project]
name = "pyredis-om"
version = "0.6.6"
description = "A drop-in replacement for `redis-om`, built out of frustration."
authors = [
    { name = "Redis OSS", email = "oss@redis.com" },
]
maintainers = [
    { name = "Srikanth", email = "srikanth@psync.club" },
]
license = { text = "BSD-3-Clause" }
readme = "README.md"
requires-python = ">=3.10,<4.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Database",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python",
]
dependencies = [
    "redis>=6.4.0",
    "pydantic>=2.0.0,<3.0.0",
    "click>=8.1.7,<9.0.0",
    "types-redis>=4.6.0,<5.0.0",
    "python-ulid>=3.0.0,<4.0.0",
    "hiredis>=3.3.1,<4.0.0",
    "more-itertools>=11.0.1,<12.0.0",
]

[project.urls]
Code = "https://github.com/xchikux/redis-om-python"
Repository = "https://github.com/xchikux/redis-om-python"
"Issue tracker" = "https://github.com/xchikux/redis-om-python/issues"

[project.scripts]
migrate = "redis_om.model.cli.migrate:migrate"

[project.optional-dependencies]
dev = [
    "mypy>=1.15,<2.0",
    "pytest>=9.0.3,<10",
    "pytest-cov>=6.0,<8.0",
    "pytest-codspeed>=3.0,<5.0",
    "ipdb>=0.13.9,<0.14.0",
    "black>=24.0,<28.0",
    "isort>=5.0,<9.0",
    "flake8>=6.0,<8.0",
    "bandit>=1.7,<2.0",
    "coverage>=7.0,<9.0",
    "pytest-xdist>=3.0,<4.0",
    "unasync>=0.6.0,<0.8.0",
    "pytest-asyncio>=1.0,<2.0",
    "email-validator>=2.0,<3.0",
    "tox>=4.0,<6.0",
    "strawberry-graphql>=0.314.0",
    "twine>=6.2.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["aredis_om*", "redis_om*"]

[tool.setuptools.package-data]
"redis_om" = ["**/*"]
