[project]
name = "pyredis-om"
version = "0.8.4"
description = "A drop-in replacement for `redis-om`, built out of frustration."
authors = [
    { name = "Redis OSS", email = "oss@redis.com" },
]
maintainers = [
    { name = "Srikanth", email = "oss@psync.club" },
]
license = { text = "BSD-3-Clause" }
readme = "README.md"
requires-python = ">=3.10,<4.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Database",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python",
]
dependencies = [
    "redis>=8.0.0,<9.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "click>=8.1.7,<9.0.0",
    "python-ulid>=3.0.0,<4.0.0",
    "hiredis>=3.4.0,<5.0.0",
    "more-itertools>=11.1.0,<12.0.0",
    "mypy[dev]>=2.1.0",
]

[project.urls]
Code = "https://github.com/xchikux/redis-om-python"
Repository = "https://github.com/xchikux/redis-om-python"
"Issue tracker" = "https://github.com/xchikux/redis-om-python/issues"

[project.scripts]
migrate = "redis_om.model.cli.migrate:migrate"

[project.optional-dependencies]
dev = [
    "mypy>=1.15,<3.0",
    "ruff>=0.9.0,<1.0.0",
    "pytest>=9.0.3,<10",
    "pytest-cov>=6.0,<8.0",
    "pytest-codspeed>=3.0,<6.0",
    "ipdb>=0.13.9,<0.14.0",
    "coverage>=7.0,<9.0",
    "pytest-xdist>=3.0,<4.0",
    "unasync>=0.6.0,<0.8.0",
    "pytest-asyncio>=1.0,<2.0",
    "email-validator>=2.0,<3.0",
    "tox>=4.0,<6.0",
    "strawberry-graphql>=0.314.0",
    "twine>=6.2.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["aredis_om*", "redis_om*"]

[tool.setuptools.package-data]
"redis_om" = ["**/*"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.format]
# Use black-compatible formatting
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
# Match old flake8 behavior: E, W, F codes only
select = [
    "F",       # pyflakes
    "E",       # pycodestyle errors
    "W",       # pycodestyle warnings
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "E721",    # type comparisons - existing pattern in codebase
    "F401",    # unused imports - common in __init__.py re-exports
    "RUF001",  # ambiguous Unicode character (may want to enable later)
    "RUF012",  # mutable class attributes (may want to enable later)
]

[tool.ruff.lint.isort]
# isort-compatible settings matching our black profile
force-single-line = false
lines-after-imports = 2
